k8s/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: direction-parser-ingress
spec:
  rules:
  - host: direction-parser
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: direction-parser-service
            port:
              number: 80
