k8s/web-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: direction-parser-ingress
spec:
  rules:
  - host: direction-parser
    http:
      paths:
      - backend:
          serviceName: direction-parser-service
          servicePort: 80
